# omnicone

./: .gitignore  .gitmodules  EKF_notes.txt  README.md  coordinates
ROS/omnicone/: CMakeLists.txt  package.xml
ROS/omnicone/config/: motors_a.yaml  motors_b.yaml  omnicone_b.yaml
ROS/omnicone/launch/: AutoRover_test.launch  Kinematic_Control.launch  Kinematic_Control_test.launch  Square_test.launch  UBX_control.launch  dead_reckoning.launch  direction_control.launch  direction_control_cycle_test.launch  early_demo.launch  linear_test.launch  motor_driver_test.launch  omni_control.launch  position_control.launch  rect_test_ccw.launch  rect_test_cw.launch  (+1 more)
ROS/roboteq_python-master/: package.xml
ROS/roboteq_python-master/scripts/: get_roboteq_id  roboteq_driver_node  set_roboteq_id
ROS/roboteq_python-master/udev/: 99-roboteq.rules
ROS/wp_control/: CMakeLists.txt
ROS/wp_control/launch/: purePursuit.launch  waypointFollower.launch
ROS/wp_control/launch_scripts/: dbw_joystick
ROS/wp_control/paths/: scaleWaypoints
ROS/wp_control/paths/demo/: waypoints  waypoints_0.5  waypoints_1  waypoints_10  waypoints_12  waypoints_15  waypoints_2  waypoints_20  waypoints_3  waypoints_4  waypoints_5  waypoints_7
ROS/wp_control/src/gpsWaypoint/: CMakeLists.txt  GenerateWaypoints  pub_accel.cpp
ROS/wp_control/src/gpsWaypoint/archiveTracking/: gpsTrajectory.cpp  gpsTrajectory.h  gpsWaypoint_paper_version1.cpp  gpsWaypoint_version1.cpp  gpsWaypoint_working_version2.h  gpsWaypoint_working_version3.cpp
autocone/config/: autocone.yaml
autocone/udev/: 99-serial.rules
gazebo/: README.md
omnicone/: CMakeLists.txt  package.xml
omnicone/config/: cone.yaml  cone1.yaml  cone2.yaml  cone_topics.yaml  control_topics.yaml  omnicone_a.yaml  omnicone_b.yaml
omnicone/launch/: Heartbeat.launch  Kinematic_Control.launch  MultiCone.launch  MultiCone1.launch  MultiCone2.launch  UBX_control.launch  dead_reckoning.launch  demo1.launch  demo2.launch  position_control.launch  test.launch
omnicone/nodes/: ConeEKF  ConeStateManager  ConeStateManager.save  Heartbeat  KinematicController  WaypointPublisher  vel_command_publisher
omnicone/paths/: .~lock.Lane_1.csv#  BridgeTest1.csv  Lane1.csv  Lane_1.csv  Lane_2.csv  NorthLine_1.csv  NorthLine_2.csv  SquarePath.csv  UTM_1.csv  UTM_2.csv
omnicone/resource/: UBX_gui.py  cone_cmd.ui  cone_cmd_gui.py  dead_reck_gui.py
omnicone/scripts/: EKF.py  Kinematic_Controller.py  UBX_publisher.py  key_teleop.py  pos_cmd.py
omnicone/udev/: 99-serial.rules
omnicone_msgs/: CMakeLists.txt  package.xml
omnicone_msgs/msg/: ConeCommand.msg  ConeState.msg
open_base/: CMakeLists.txt
open_base/config/: joint_velocity.yaml
open_base/launch/: parameter.launch  velocity controller.launch
open_base/src/: main.cpp
roboteq_python-master/: CMakeLists.txt  README.md
roboteq_python-master/scripts/: roboteq_driver_node
wp_control/: package.xml
wp_control/cfg/: gpsWaypoint_params.cfg
wp_control/launch/: recordWpts.launch
wp_control/launch_scripts/: bywire_launch  camera_launch  gps_launch
wp_control/paths/: shiftWaypoints
wp_control/paths/demo/: waypoints_0.5  waypoints_1  waypoints_10  waypoints_12  waypoints_15  waypoints_2  waypoints_20  waypoints_3  waypoints_4  waypoints_5  waypoints_7
wp_control/src/gpsWaypoint/: gpsWaypoint.cpp  gpsWaypoint.h
wp_control/src/gpsWaypoint/archiveTracking/: gpsWaypoint_paper_version1.h  gpsWaypoint_version2.cpp  gpsWaypoint_working_version1.cpp  gpsWaypoint_working_version3.h
wp_control/src/purePursuit/: CMakeLists.txt  purePursuit.cpp  purePursuit.h
(+37 files in other folders)
