<?xml version="1.0"?>
<package>
  <name>roboteq_python</name>
  <version>0.0.0</version>
  <description>Simple ROS node for talking to roboteq controller</description>

  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-serial</run_depend>
</package>
